use Path.of instead of Path.get